[project]
name = "puzzle-box"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[tool.pyright]
extraPaths = ["packages/puzzle/src", "packages/solvers/src"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
