[project]
name = "puzzle-box"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[tool.pyright]
extraPaths = ["packages/puzzle/src", "packages/puzzle-impls/src", "packages/solvers/src"]

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = ["*-test.py"]
addopts = "--import-mode=importlib"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
